# lis-simulator

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  TEST_PLAN.md
scripts/: generate_icon.py
settings/: protocol.json  query_responses.json
src/: config.rs  headless.rs  lib.rs  main.rs  state.rs
src/app/: callbacks.rs  mod.rs  print_callbacks.rs  ui_update.rs
src/astm/: control.rs  frame.rs  mod.rs  record.rs
src/print/: layout.rs  mod.rs  pdf.rs  types.rs
src/serial/: port.rs
tests/: README.md  astm_e2e.rs  instrument_simulator.py  protocol_config.py  setup_vserial.sh  test_integration.ps1  test_serial_linux.sh  test_tcp.py
ui/: main.slint
