[package]
name = "lis-simulator"
version = "1.5.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "lis_simulator"
path = "src/lib.rs"

[[bin]]
name = "lis-simulator"
path = "src/main.rs"

[dependencies]
slint = "1.15"
serialport = "4"
anyhow = "1"
chrono = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 打印功能依赖
printpdf = "0.7"
fontdb = "0.16"
rfd = "0.15"  # 文件对话框

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Graphics_Printing",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]

[build-dependencies]
slint-build = "1.15.0"
embed-resource = "2"
